# NetScanX

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  ENTERPRISE_FEATURES.md  GETTING_STARTED.de.md  GETTING_STARTED.md  LICENSE  PRIVACY.md  README.de.md  README.md  ROADMAP.md  SECURITY.md  SKELETON.md  TEMPLATE_NOTES.md  TERMS_OF_SALE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
netscanx/: __init__.py  __main__.py  __main__frozen__.py  models.py  output.py
netscanx/cli/: assets.py  baseline.py  changes.py  dashboard.py  diagnose.py  discover.py  health.py  main.py  services.py  speedtest.py
netscanx/dashboard/: server.py
netscanx/dashboard/static/: app.js  index.html
netscanx/diagnostics/: __init__.py  checks.py
netscanx/discovery/: __init__.py  mdns.py  netbios.py  snmp.py  ssdp.py
netscanx/enrichment/: passive.py  windows_wmi.py
netscanx/health/: local_checks.py  models.py  network_checks.py  remote_checks.py
netscanx/inventory/: diff.py  identity.py  service.py
netscanx/performance/: __init__.py  speedtest.py
netscanx/scanner/: __init__.py  hostname.py  layer2.py  layer3.py  layer4.py  privileges.py  vendor.py
netscanx/storage/: db.py  paths.py  repository.py  schema.py
scripts/: dev.ps1  dev.sh
tests/: test_service_e2e.py
tests/health/: test_scoring.py
tests/inventory/: test_diff.py  test_identity.py
tests/storage/: test_db_roundtrip.py  test_paths.py
tools/: test_network.py
