[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netscanx"
version = "1.0.0"
description = "Cross-platform network discovery and diagnostic toolkit"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "click>=8.1.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.0",
    "aiohttp>=3.10.0",
    "icmplib>=3.0.4",
    "zeroconf>=0.132.2",
    "scapy>=2.5.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "platformdirs>=4.2.0",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]
windows = [
    "wmi>=1.5.1; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
]
build = [
    "pyinstaller>=6.10.0",
]

[project.scripts]
netscanx = "netscanx.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["netscanx"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
